# aegis-cli

./: LICENSE  README.md  pyproject.toml
aegis/cli/: entry.py
aegis/core/: config.py  context.py  modes.py
aegis/teaching/: explainer.py
