[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aegis-cli"
version = "0.1.0"
description = "Local-first AI Linux CLI assistant"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"

dependencies = [
    "rich",
    "pyyaml",
]

[project.scripts]
aegis = "aegis.cli.entry:main"

[tool.setuptools]
packages = ["aegis"]